# jpeganim

./: .gitignore  Cargo.toml  README.md
src/: imgloader.rs  main.rs
src/support/: mod.rs
